fix(css): slider overlap

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -496,7 +496,16 @@ footer {
   padding: 5em 5em;
 }
 
-/* ------- slider small ------- */
+/* ------- blog thumbnails ------- */
+
+/* 
+
+this combination allows to click on things and animate opacity 0 <-> 1
+
+opacity: 0;
+pointer-events: none; */
+
+/* ------- slider ------- */
 
 .slide-container {
   display: flex;
@@ -511,7 +520,7 @@ footer {
   display: flex;
 
   width: 100%;
-  height: 600px;
+  height: 30em;
   position: absolute;
   left: 0;
   justify-content: center;
@@ -578,7 +587,7 @@ footer {
 .modal {
   background-color: rgba(0, 0, 0, 0.6);
 
-  /*  this combination allows to click on things and animate opaciti 0 <-> 1  */
+  /*  this combination allows to click on things and animate opacity 0 <-> 1  */
   opacity: 0;
   pointer-events: none;
 
